--- a/app/views/main/clamshells.html.erb
+++ b/app/views/main/clamshells.html.erb
@@ -22,7 +22,7 @@
                 <p class="author-category">Custom <a href="#">Plastic Packaging</a> in <a href="">About Us</a></p>
                 <hr>
                 <p class="intro">We have rich experience in plastic packaging production for foods, candies, retail, householding goods, hardware, fasteners of PET, PVC, PP, HIPS , with thickness of material from 0,2 to 2 mm. We have facilities and knowledge to support and provide quality for customized plastic packaging. We made customized plastic packaging of all types, starting with 3d-model prototyping, picking material, building a molding tool and then molding products. </p>
-                <p class="read-more"><a href="#" class="btn btn-outline-primary">Continue reading</a></p>
+                <p class="read-more"><a href="<%= products_path %>" class="btn btn-outline-primary">Go to products catalog</a></p>
               </div>
             </div>
           </div>
@@ -44,15 +44,15 @@
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'shelftalkers.jpg' %>" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path '2kcl.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
 
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="detail.html">Shelftalker</a></h3>
+                  <h3><a href="detail.html">2 component clamshell</a></h3>
                   <p class="price">
-                    <del>$2.4</del> $2.12
+                    <del>$0.41</del> $0.39
                   </p>
                 </div>
                 <!-- /.text-->
@@ -99,14 +99,14 @@
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'shelforg.jpg' %>" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'box5.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="detail.html">Molded dispenser</a></h3>
+                  <h3><a href="detail.html">Salad box</a></h3>
                   <p class="price">
-                    <del>$6.5</del> $6.05
+                    <del>$0.5</del> $0.42
                   </p>
                 </div>
                 <!-- /.text-->
@@ -144,13 +144,13 @@
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'disacr.jpg' %>" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'sauce.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="<%= products_path %>">Acryllic Display</a></h3>
-                  <p class="price">$143.00</p>
+                  <h3><a href="<%= products_path %>">Tray for sauce with/without a cover</a></h3>
+                  <p class="price">$0.23</p>
                 </div>
                 <!-- /.text-->
                 <div class="ribbon new">
@@ -168,8 +168,8 @@
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="detail.html">Acryllic Stand</a></h3>
-                  <p class="price">$5.2</p>
+                  <h3><a href="detail.html">Products tray for retail</a></h3>
+                  <p class="price">$0.07</p>
                 </div>
                 <!-- /.text-->
               </div>
