--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -370,7 +370,7 @@ We always proudly note as sells of our customers grow. </p>
         *** PROMO BAR ***
         _________________________________________________________
         -->
-        <div class="bar background-image-fixed-2 no-mb color-white text-center">
+        <div class="bar background-image-fixed-1 no-mb color-white text-center">
           <div class="dark-mask"></div>
           <div class="container">
             <div class="row">
@@ -400,16 +400,16 @@ We always proudly note as sells of our customers grow. </p>
                 <p class="author-category">By <a href="#">Catalog</a> in <a href="">Our style</a></p>
                 <hr>
                 <p class="intro">We produce custom prodmotional and trade equipment for shops and brand promotion for about 15 years. We combine plastic production technologies and different branding technics to meet your needs.</p>
-                <p class="read-more"><a href="#" class="btn btn-outline-primary">Continue reading</a></p>
+                <p class="read-more"><a href="<%= acryllic_path %>" class="btn btn-outline-primary">Continue reading</a></p>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="post">
                 <h4><a href="#">Custom plastic packaging production</a></h4>
-                <p class="author-category">Custom <a href="<%= 'clamshells' %>">Plastic Packaging</a> in <a href="">About Us</a></p>
+                <p class="author-category">Custom <a href="<%= clamshells_path %>">Plastic Packaging</a> in <a href="">About Us</a></p>
                 <hr>
                 <p class="intro">We have rich experience in plastic packaging production for foods, candies, retail, householding goods, hardware, fasteners of PET, PVC, PP, HIPS , with thickness of material from 0,2 to 2 mm. We have facilities and knowledge to support and provide quality for customized plastic packaging. We made customized plastic packaging of all types, starting with 3d-model prototyping, picking material, building пресс-форму and then molding products. </p>
-                <p class="read-more"><a href="#" class="btn btn-outline-primary">Continue reading</a></p>
+                <p class="read-more"><a href="<%= clamshells_path %>" class="btn btn-outline-primary">Continue reading</a></p>
               </div>
             </div>
           </div>
