--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                         <li><a href="<%= 'acryllic' %>">Acryllic Stands</a></li>
                         <li><a href="#">Metal Stands</a></li>
                         <li><a href="#">Molded Displays</a></li>
-                        <li><a href="#">Clamshells</a></li>
+                        <li><a href="<%= clamshells_path %>">Clamshells</a></li>
                       </ul>
                     </div>
                     <div class="col-sm-4 col-lg-3">
