app layout footer, links

--- a/app/views/main/clamshells.html.erb
+++ b/app/views/main/clamshells.html.erb
@@ -224,3 +224,37 @@
                             </p>
                           </form>
                         </div>
+
+                   <div class="container">
+    <footer class='<% controller.controller_name %>'>
+    <%= yield %>
+  </div>
+
+
+<div class=container>
+<div class="col-lg-3 col-md-6">
+              <h4>Where to find us</h4>
+              <p><strong>Maps</strong><br>Ukraine<br>   Kyiv Region <br>    Find on map<br>   Kyiv <br><strong>Contacts </strong></p><a href="<%= contacts_path %>">Go to contact page</a>
+              <hr class="d-block d-md-none">
+            </div>
+            <!-- /.col-lg-3-->
+            
+        
+            
+                            <!-- /input-group-->
+             </form>
+              <hr>
+              <h4>Stay in touch</h4>
+              <p class="social"><a href="#"><i class="fa fa-facebook-square"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-envelope"></i></a></p>
+            </div>
+            <!-- /.col-lg-3-->
+          </div>
+          <!-- /.row-->
+        </div>
+        <!-- /.container-->
+      </div>
+ <!-- *** FOOTER END ***-->
+
+</div>
+
+</footer>
