--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -230,7 +230,7 @@ We always proudly note as sells of our customers grow. </p>
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="detail.html">Molded dispenser</a></h3>
+                  <h3><a href="#">Molded dispenser</a></h3>
                   <p class="price">
                     <del>$6.5</del> $6.05
                   </p>
@@ -256,7 +256,7 @@ We always proudly note as sells of our customers grow. </p>
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="detail.html">Suchi-box</a></h3>
+                  <h3><a href="#">Suchi-box</a></h3>
                   <p class="price">$0.44</p>
                 </div>
                 <!-- /.text-->
@@ -473,15 +473,7 @@ We always proudly note as sells of our customers grow. </p>
                   </div>
                 </div>
             <!-- /.col-lg-3-->
-            <div class="col-lg-3 col-md-6">
-              <h4>Where to find us</h4>
-              <p><strong>Maps</strong><br>Ukraine<br>		Kyiv Region <br>		Find on map<br>		Kyiv <br><strong>Contacts </strong></p><a href="<%= contacts_path %>">Go to contact page</a>
-              <hr class="d-block d-md-none">
-            </div>
-            <!-- /.col-lg-3-->
-            <div class=container>
-            <div class="col-lg-3 col-md-6">
-            
+           
               <h4>Get the news</h4>
             </div>
               <div class="col-lg-3 col-md-6">
@@ -497,19 +489,8 @@ We always proudly note as sells of our customers grow. </p>
               </div>
             </div>
           </div>
-
-                <!-- /input-group-->
-              </form>
-              <hr>
-              <h4>Stay in touch</h4>
-              <p class="social"><a href="#"><i class="fa fa-facebook-square"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-envelope"></i></a></p>
-            </div>
             <!-- /.col-lg-3-->
-          </div>
-          <!-- /.row-->
-        </div>
-        <!-- /.container-->
-      </div>
+</div>
       <!-- /#footer-->
       <!-- *** FOOTER END ***-->
 
