--- a/app/views/main/services.html.erb
+++ b/app/views/main/services.html.erb
@@ -1,5 +1,6 @@
 <h1>Services</h1>
 
+We supply our customers with graphic design including preprinting works, 3d rendering, constructional 3d modelling with drawings (SolidWorks), molding tool modelling, product samples on demand ( depending on a product).
 
 
 
