--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -175,7 +175,7 @@
   </head>
 
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
+     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
       <li><%= link_to 'Home', home_path %></li>
       <li><%= link_to 'Catalog', catalog_path %> </li>
@@ -186,7 +186,7 @@
       <li><a href="https://#{host}/home"><%= t('.home') %></a></li>
        <li><a href="https://#{host}/catalog"><%= t('.catalog') %></a></li>
        <li><a href="https://#{host}/contacts"><%= t('.contacts') %></a></li>
-
+    </ul>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if !user_signed_in? %>
@@ -223,8 +223,39 @@
   </header>
 
   <div class="container">
-    <body class='<% controller.controller_name %>'>
+    <footer class='<% controller.controller_name %>'>
     <%= yield %>
   </div>
-  </body>
+
+
+<div class=container>
+<div class="col-lg-3 col-md-6">
+              <h4>Where to find us</h4>
+              <p><strong>Maps</strong><br>Ukraine<br>   Kyiv Region <br>    Find on map<br>   Kyiv <br><strong>Contacts </strong></p><a href="<%= contacts_path %>">Go to contact page</a>
+              <hr class="d-block d-md-none">
+            </div>
+            <!-- /.col-lg-3-->
+            
+        
+            
+                            <!-- /input-group-->
+             </form>
+              <hr>
+              <h4>Stay in touch</h4>
+              <p class="social"><a href="#"><i class="fa fa-facebook-square"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-envelope"></i></a></p>
+            </div>
+            <!-- /.col-lg-3-->
+          </div>
+          <!-- /.row-->
+        </div>
+        <!-- /.container-->
+      </div>
+ <!-- *** FOOTER END ***-->
+
+</div>
+
+</footer>
+</body>
+
 </html>
+
