--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -44,29 +44,31 @@
             <h4 class="heading margin-bottom">Contact form</h4>
             <p class="text-muted">Ask a question or make a proposition</p>
             <form>
-              <div class="row">
+              <%= form_for(@inquiry, path: '/inquiries', method: :post) do |f| %>
+                <div class="row">
                 <div class="col-sm-6">
                   <div class="form-group">
                     <label for="firstname">Firstname</label>
-                    <input id="firstname" type="text" class="form-control">
+                    <%= f.text_field :first_name, placeholder: "First name" %>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div class="form-group">
-                    <label for="lastname">Lastname</label>
-                    <input id="lastname" type="text" class="form-control">
+                    <label for="secondname">Lastname</label>
+                    <%= f.text_field :second_name, placeholder: "Last name" %>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div class="form-group">
                     <label for="email">Email</label>
-                    <input id="email" type="text" class="form-control">
+                    <%= f.email_field :email, placeholder: "Type your email address" %>
+                    
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div class="form-group">
                     <label for="subject">Subject</label>
-                    <input id="subject" type="text" class="form-control">
+                    <%= f.text_field :subject, placeholder: "Subject" %>
                   </div>
                 </div>
                 <div class="col-sm-12">
@@ -76,7 +78,8 @@
                   </div>
                 </div>
                 <div class="col-sm-12">
-                  <button type="submit" class="btn btn-primary"><i class="fa fa-envelope-o"></i> Send message</button>
+                  <%= f.button 'Submit', class: 'submit', type: 'submit' %>
+                  <% end %>
                 </div>
               </div>
             </form>
