subscriptions test & racks page

--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -454,6 +454,12 @@ button i.fa {
   
 }
 
+.bar.background-image-fixed-3 {
+  background: url(<%= asset_path 'racks_ttl.jpg', :size => "1200x400" %>) center top no-repeat;
+  background-attachment: fixed;
+  
+}
+
 .bar.color-white h1,
 .bar.color-white h2,
 .bar.color-white h3,
