--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -446,7 +446,7 @@ We always proudly note as sells of our customers grow. </p>
                       <h3>Catalog</h3>
                       <ul>
                         <li><a href="#">Acryllic Stands</a></li>
-                        <li><a href="#l">Metal Stands</a></li>
+                        <li><a href="<%= racks_path %>">Metal Stands</a></li>
                         <li><a href="#">Molded Displays</a></li>
                         <li><a href="#">Clamshells</a></li>
                       </ul>
