--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
                       <h3>Catalog</h3>
                       <ul>
                         <li><a href="<%= 'acryllic' %>">Acryllic Stands</a></li>
-                        <li><a href="#">Metal Stands</a></li>
+                        <li><a href="<%= 'racks' %>">Metal Stands</a></li>
                         <li><a href="#">Molded Displays</a></li>
                         <li><a href="<%= clamshells_path %>">Clamshells</a></li>
                       </ul>
@@ -76,12 +76,12 @@
               <div class="dropdown-menu">
                 <div class="yamm-content">
                   <div class="row">
-                    <div class="col-lg-3 d-none d-lg-inline-block"><img src="<%= asset_path 'image857.jpg' %>" alt="" class="img-fluid"></div>
+                    <div class="col-lg-3 d-none d-lg-inline-block"><img src="<%= asset_path 'rack.jpg' %>" alt="" class="img-fluid"></div>
                     <div class="col-sm-4 col-lg-3">
                       <h3>Catalog</h3>
                       <ul>
                         <li><a href="#">Acryllic Stands</a></li>
-                        <li><a href="#l">Metal Stands</a></li>
+                        <li><a href="<%= racks_path %>">Metal Stands</a></li>
                         <li><a href="#">Molded Displays</a></li>
                         <li><a href="#">Clamshells</a></li>
                       </ul>
