--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -443,7 +443,7 @@ button i.fa {
 }
 
 .bar.background-image-fixed-1 {
-  background: url(<%= asset_path 'title22.png', :size => "1200x400" %>)  center top no-repeat;
+  background: url(<%= asset_path 'title.png', :size => "1200x400" %>)  center top no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
@@ -456,6 +456,12 @@ button i.fa {
 
 .bar.background-image-fixed-3 {
   background: url(<%= asset_path 'racks_ttl.jpg', :size => "1200x400" %>) center top no-repeat;
+  background-attachment: fixed;
+  
+}
+
+.bar.background-image-fixed-4 {
+  background: url(<%= asset_path 'title22.png', :size => "1200x400" %>) center top no-repeat;
   background-attachment: fixed;
   
 }
