--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
                       <ul>
                         <li><a href="<%= 'acryllic' %>">Acryllic Stands</a></li>
                         <li><a href="<%= 'racks' %>">Metal Stands</a></li>
-                        <li><a href="#">Molded Displays</a></li>
+                        <li><a href="<%= mold_path %>">Molded Displays</a></li>
                         <li><a href="<%= clamshells_path %>">Clamshells</a></li>
                       </ul>
                     </div>
