--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -9,8 +9,8 @@
 <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
 </tr>
 </table>
- <%= button_to 'Checkout', new_order_path, method: :get %>
- <%= button_to 'Empty cart', cart, method: :delete,
+ <%= button_to t('.checkout'), new_order_path, method: :get %>
+ <%= button_to t('.empty'), cart, method: :delete,
 data: { confirm: 'Are you sure?' } %>
 
 <% end %>
