--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
 <p id="notice"><%= notice %></p>
 
-<h1><strong>Products</strong></h1>
+<h1><strong><%= t('.title')%></strong></h1>
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <thead style="background color: #e0f8f8">
@@ -26,8 +26,8 @@
     </td>
     <td class= "price_line">
       <span class="price"><%= number_to_currency(product.price) %></span>
-
-     <%= button_to t('.add_html'),
+     
+     <%= button_to t('.add'),
      line_items_path(product_id: product, locale: I18n.locale),
 remote: true %>
   </td>
