--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -2,7 +2,7 @@
 <h1>New Order</h1>
 <div class="depot_form">
 	<fieldset>
-		<legend>Please enter your details</legend>
+		<legend><%= t('.legend') %></legend>
 		<%= render 'form', order: @order %>
     </fieldset>
 </div>
