--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -125,10 +125,10 @@
                       </ul>
                       <h5>Shop</h5>
                       <ul>
-                        <li><a href="#">Category - sidebar right</a></li>
-                        <li><a href="#">Category - sidebar left</a></li>
-                        <li><a href="#">Category - full width</a></li>
-                        <li><a href="#">Product detail</a></li>
+                        <li><a href="<%= gallery_path %>">Gallery</a></li>
+                        <li><a href="<%= catalog_path %>">Catalog</a></li>
+                        <li><a href="<%= products_path %>">Products</a></li>
+                        <li><a href="<%= products_path %>">Product details</a></li>
                       </ul>
                     </div>
                  
