--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -34,7 +34,7 @@
               <div class="icon"><i class="pe-7s-mail-open"></i></div>
               <h4 class="heading margin-bottom">Send your quotes on email</p>
               <ul>
-                <li><strong><a href="mailto:">rkraft@rkraft.com.ua</a></strong></li>
+                <li><a href="mailto:">ritz.rkraft@gmail.com</a></li>
               
               </ul>
             </div>
@@ -90,6 +90,7 @@
     </section>
     <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
+    <script src="https://www.google.com/maps/embed/v1/MODE?key=AIzaSyCImVA9mhtyEYa5kABn2kVi4f9gQPtNG1k&parameters"></script>
     <!-- to use it on your site, generate your own API key for Google Maps and paste it above -->
     <footer class="footer">
       <div class="footer__block">
