--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,9 +49,9 @@
                     <div class="col-sm-4 col-lg-3">
                       <h3>Additional</h3>
                       <ul>
-                        <li><a href="#">POS clamshells</a></li>
+                        <li><a href="<%= moldshell_path %>">POS clamshells</a></li>
                         <li><a href="#">Blinks and Lighting</a></li>
-                        <li><a href="#">Shelftalkers</a></li>
+                        <li><a href="<%= moldshell_path %>">Shelftalkers</a></li>
                         <li><a href="#">Accessories</a></li>
                       </ul>
                     </div>
