--- a/app/views/order_mailer/received.html.erb
+++ b/app/views/order_mailer/received.html.erb
@@ -1,5 +1,5 @@
-<h1>Order#received</h1>
+<h1>Your order received!</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/order_mailer/received.html.erb
+  Hello, we received your order and will get back to you soon with production and shipping details.
 </p>
