--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -17,6 +17,7 @@
 
   <%= stylesheet_link_tag 'carousel.css', media: 'print, screen' %>
   <%= javascript_include_tag('jquery.js') %>
+   <%= javascript_include_tag('jquery.min.js') %>
  <%= javascript_include_tag('bootstrap.min.js') %>
  <%= javascript_include_tag('carousel.js') %>
     <!-- Font Awesome css-->
@@ -495,7 +496,7 @@ We always proudly note as sells of our customers grow. </p>
 
     </div>
     <!-- #### JavaScript files ###-->
-   
+
     <!-- main script-->
    
   </body>
