--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -42,44 +42,44 @@
           <div class="col-lg-7 col-lg-offset-1">
             <div class="icon"><i class="pe-7s-pen"></i></div>
             <h4 class="heading margin-bottom">Contact form</h4>
-            <p class="text-muted">Ask a question or make a proposition</p>
-            <form>
+            <p class="text-muted">Place your inquiry here</p>
+            <div class="form-holder">
               <%= form_for(@inquiry, path: '/inquiries', method: :post) do |f| %>
                 <div class="row">
                 <div class="col-sm-6">
-                  <div class="form-group">
-                    <label for="firstname">Firstname</label>
+                 
+                    <label for="firstname">First name</label>
                     <%= f.text_field :first_name, placeholder: "First name" %>
                   </div>
                 </div>
                 <div class="col-sm-6">
-                  <div class="form-group">
-                    <label for="secondname">Lastname</label>
+                  
+                    <label for="secondname">Last name</label>
                     <%= f.text_field :second_name, placeholder: "Last name" %>
-                  </div>
+                  
                 </div>
                 <div class="col-sm-6">
-                  <div class="form-group">
+                 
                     <label for="email">Email</label>
                     <%= f.email_field :email, placeholder: "Type your email address" %>
                     
-                  </div>
+                  
                 </div>
                 <div class="col-sm-6">
-                  <div class="form-group">
+                  
                     <label for="subject">Subject</label>
                     <%= f.text_field :subject, placeholder: "Subject" %>
-                  </div>
+                  
                 </div>
                 <div class="col-sm-12">
-                  <div class="form-group">
+                  
                     <label for="message">Message</label>
                     <%= f.text_field :message, placeholder: "Write inquiring details here" %>
-                  </div>
+                 
                 </div>
                 <div class="col-sm-12">
                    <div class="form-group">
-                  <%= f.button 'Submit', class: 'submit', type: 'submit' %>
+                  <%= f.button 'Submit', class: 'submit', type: 'submit' %><a href="mailto: ritz.rkraft@gmail.com"></a>
                   <% end %>
                 </div>
               </div>
