Inquiry mailer now sends repliess

--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-sm-12">
                    <div class="form-group">
-                  <%= f.button 'Submit', class: 'submit', type: 'submit' %><a href="mailto: ritz.rkraft@gmail.com"></a>
+                  <%= f.button 'Submit', class: 'submit', type: 'submit' %>
                   <% end %>
                 </div>
               </div>
