subscription mailer test, google maps stuff

--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -88,10 +88,12 @@
         </div>
       </div>
     </section>
-    <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
-    <script src="https://www.google.com/maps/embed/v1/MODE?key=AIzaSyCImVA9mhtyEYa5kABn2kVi4f9gQPtNG1k&parameters"></script>
-   
+    <div id="map">
+    
+    <img src="https://maps.googleapis.com/maps/api/staticmap?center=Ромашки,+Київська+обл.,+09623/@49.848152,30.308178,10.5z/data=!4m13!1m7!3m6!1s0x40d3777a169dab73:0x163de9c524752f3d!2z0KDQvtC80LDRiNC60LgsINCa0LjRl9Cy0YHRjNC60LAg0L7QsdC7LiwgMDk2MjM!3b1!8m2!3d49.7318727!4d30.5992011!3m4!1s0x40d3777a169dab73:0x163de9c524752f3d!8m2!3d49.7318727!4d30.5992011&size=400x400&zoom=17&key=AIzaSyCImVA9mhtyEYa5kABn2kVi4f9gQPtNG1k"></img>
+
+</div>
+
     <footer class="footer">
       <div class="footer__block">
         <div class="container">
