--- a/app/views/subscription_mailer/subscribe.html.erb
+++ b/app/views/subscription_mailer/subscribe.html.erb
@@ -1,3 +1,3 @@
 <div class="center jumbotron">
-<h2>You git subscription</h2>
+<h2>You got subscription</h2>
 <p>Hello, your subscription is set on mail <%= @email_address %> ! </p>
