--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -15,11 +15,7 @@
     <!-- Google fonts - Montserrat and Merriweather-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Merriweather:400,400italic" rel="stylesheet" type="text/css">
 
-  <%= stylesheet_link_tag 'carousel.css', media: 'print, screen' %>
-  <%= javascript_include_tag('jquery.js') %>
-   <%= javascript_include_tag('jquery.min.js') %>
- <%= javascript_include_tag('bootstrap.min.js') %>
- <%= javascript_include_tag('carousel.js') %>
+
     <!-- Font Awesome css-->
 
 
@@ -309,7 +305,7 @@ We always proudly note as sells of our customers grow. </p>
                     <button type="button" data-dismiss="modal" aria-hidden="true" class="close">×</button>
                     <div class="row quick-view product-main">
                       <div class="col-sm-6">
-                        <div class="quick-view-main-image"><img src="img/detailbig1.jpg" alt="" class="img-fluid"></div>
+                        <div class="quick-view-main-image"><img src="<%= asset_path 'title.png' %>" alt="" class="img-fluid"></div>
                         <div class="ribbon ribbon-quick-view sale">
                           <div class="theribbon">SALE</div>
                           <div class="ribbon-background"></div>
