--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,21 +53,21 @@
                       </ul>
                     </div>
                     <div class="col-sm-4 col-lg-3">
-                      <h3>Additional</h3>
+                      <h3><%= t('.additional') %></h3>
                       <ul>
-                        <li><a href="<%= moldshell_path %>">POS clamshells</a></li>
-                        <li><a href="#">Blinks and Lighting</a></li>
-                        <li><a href="<%= moldshell_path %>">Shelftalkers</a></li>
-                        <li><a href="#">Accessories</a></li>
+                        <li><a href="<%= moldshell_path %>"><%= t('.moldshell') %></a></li>
+                        <li><a href="#"><%= t('.lighting') %></a></li>
+                        <li><a href="<%= moldshell_path %>"><%= t('.shelftalkers') %></a></li>
+                        <li><a href="#"><%= t('.accessories') %></a></li>
                       </ul>
                     </div>
                     <div class="col-sm-4 col-lg-3">
-                      <h3>Servives</h3>
+                      <h3><%= t('.services') %></h3>
                       <ul>
-                        <li><a href="#">Design</a></li>
-                        <li><a href="#">Constructing</a></li>
-                        <li><a href="#">3D Modelling</a></li>
-                        <li><a href="#">Consulting</a></li>
+                        <li><a href="#"><%= t('.design') %></a></li>
+                        <li><a href="#"><%= t('.constructing') %></a></li>
+                        <li><a href="#"><%= t('.3dmodelling') %></a></li>
+                        <li><a href="#"><%= t('.consulting') %></a></li>
                       </ul>
                     </div>
                   </div>
@@ -78,7 +78,7 @@
                 </div>
               </div>
             </div>
-            <div class="nav-item dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Metal Stands <b class="caret"></b></a>
+            <div class="nav-item dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle"><%= t('.metal') %><b class="caret"></b></a>
               <div class="dropdown-menu">
                 <div class="yamm-content">
                   <div class="row">
@@ -102,7 +102,7 @@
                       </ul>
                     </div>
                     <div class="col-sm-4 col-lg-3">
-                      <h3>Servives</h3>
+                      <h3>Services</h3>
                       <ul>
                         <li><a href="#">Design</a></li>
                         <li><a href="#">Constructing</a></li>
@@ -113,12 +113,12 @@
                   </div>
                 </div>
                 <div class="footer clearfix d-none d-lg-block">
-                  <h4 class="pull-right">Acryllic Stands </h4>
+                  <h4 class="pull-right"><%= t('.acryllic') %></h4>
                   <div class="buttons pull-left"><a href="#" class="btn btn-light btn-sm mr-2"><i class="fa fa-tags"></i> Sales</a><a href="#" class="btn btn-light btn-sm mr-2"><i class="fa fa-star-o"></i> Favourites</a><a href="#" class="btn btn-light btn-sm mr-2"><i class="fa fa-globe"></i> Brands</a></div>
                 </div>
               </div>
             </div>
-            <div class="nav-item dropdown yamm-fw"><a href="<%= gallery_path %>" data-toggle="dropdown" data-hover="dropdown" data-delay="200" class="nav-link dropdown-toggle">Gallery <b class="caret"></b></a>
+            <div class="nav-item dropdown yamm-fw"><a href="<%= gallery_path %>" data-toggle="dropdown" data-hover="dropdown" data-delay="200" class="nav-link dropdown-toggle"><%= t('.gallery') %><b class="caret"></b></a>
               <div class="dropdown-menu">
                 <div class="yamm-content">
                   <div class="row">
@@ -166,7 +166,7 @@
                 <!-- /.yamm-content-->
               </div>
             </div>
-            <div class="nav-item"><a href="<%= contacts_path %>" class="nav-link">Contact</a></div>
+            <div class="nav-item"><a href="<%= contacts_path %>" class="nav-link"><%= t('.contacts') %></a></div>
           </div>
 
         <!-- /.nav-collapse-->
@@ -228,8 +228,8 @@
 
 <div class=container>
 <div class="col-lg-3 col-md-6">
-              <h4>Where to find us</h4>
-              <p><strong>Maps</strong><br>Ukraine<br>   Kyiv Region <br>    Find on map<br>   Kyiv <br><strong>Contacts </strong></p><a href="<%= contacts_path %>">Go to contact page</a>
+              <h4><%= t('.where') %></h4>
+              <p><strong>Maps</strong><br>Ukraine<br>   Kyiv Region <br>    Find on map<br>   Kyiv <br><strong><%= t('.contacts') %></strong></p><a href="<%= contacts_path %>"><%= t('.gocontacts') %></a>
               <hr class="d-block d-md-none">
             </div>
             <!-- /.col-lg-3-->
@@ -237,10 +237,10 @@
         
             
                             <!-- /input-group-->
-             </form>
+            
               <hr>
               <h4>Stay in touch</h4>
-              <p class="social"><a href="#"><i class="fa fa-facebook-square"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-envelope"></i></a></p>
+              <p class="social"><a href="https://www.facebook.com/RkraftManufacturing/"><i class="fa fa-facebook-square"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-envelope"></i></a></p>
             </div>
             <!-- /.col-lg-3-->
           </div>
@@ -248,6 +248,7 @@
         </div>
         <!-- /.container-->
       </div>
+
  <!-- *** FOOTER END ***-->
 
 </div>
